# pan_tilt_sensorHead

./: README.md
CAD_Models/STEP_Files_Components/: Camera2UbracketMountingPlate.step  L _extension.step  Pan_2_L_Extension_Plate.step  Sensor_HeadsetUp_MountingPlateforEddie.step
pan_tilt_control/: package.xml  setup.cfg  setup.py
pan_tilt_control/config/: controllers.yaml
pan_tilt_control/launch/: pan_tilt.launch.py
pan_tilt_description/: CMakeLists.txt  package.xml
pan_tilt_description/urdf/: pan_tilt.urdf.xacro
pan_tilt_dynamixel_cpp/: .gitignore  CMakeLists.txt  package.xml
pan_tilt_dynamixel_cpp/src/: dual_control.cpp  dynamixel_interface.hpp  motor_controller.cpp  pan_control.cpp  sdk_ping_test.cpp  tilt_control.cpp
pan_tilt_dynamixel_cpp/src/interface/: dynamixel_interface.cpp  dynamixel_interface.hpp
pan_tilt_dynamixel_cpp/src/test/: motor_controller.cpp  sdk_ping_test.cpp
pan_tilt_gazebo/: package.xml  setup.cfg  setup.py
